2009-03-14  Thomas Hinkle  <tom@grenville>

	* src/lib/plugin_gui.py (PluginChooser.do_change_plugin): Display
	error to user when loading a plugin fails. Give suggestions as to
	how to install dependencies in case of import error.

	* src/lib/plugin_loader.py (MasterLoader): Remove key_editor from
	default plugin set. This is a lot of functionality to put on
	people who don't want it -- removing it greatly simplifies Gourmet
	for those not interested.
	(MasterLoader.__init__): Add class variable 'errors' to keep track
	of errors raised in instantiating plugins, etc. This allows
	plugin_gui to display these errors to users. Use this variable
	when instantiating PluginSets to keep track of error messages our
	users may want.

2009-03-07  Thomas Hinkle  <tom@grenville>

	* src/lib/shopgui.py (ShopGui): Prevent ShopGui window from
	getting destroyed on delete-event (when user closes window from WM
	control).

2009-03-01  Thomas Hinkle  <tom@grenville>

	* src/lib/shopgui.py (ShopGui.item_added): Make sure added items
	don't end up in the pantry.

2009-02-28  Thomas Hinkle  <tom@grenville>

	* src/lib/plugins/listsaver: Added plugin (this was in the tarball
	released earlier, but had accidentally not been added to CVS).

2009-02-22  Thomas Mills Hinkle  <tom@hydrophax>

	* src/lib/plugins/key_editor/recipeEditorPlugin.py (IngredientKeyEditor.update_from_ingredient_editor_cb):
	Fix typo that caused weirdness in ingredient key editor
	view (where key of last ingredient in list got propogated to
	ingredients as they were added).
	(IngredientKeyEditor.update_from_ingredient_editor_cb): Actually
	guess the key using keyManager rather than just cutting off key
	after the semicolon.

	* src/lib/reccard.py (IngredientEditor): Remove old
	IngredientEditor class (This has all been simplified or moved to
	plugins).

	* src/lib/keymanager.py (KeyManager.look_for_key): Change math on
	key lookup slightly so that multi-word keys such as "chocolate