@@ -21,20 +21,14 @@ glade/converter.glade
 glade/converter_new.glade
 glade/converter_old.glade
 glade/databaseChooser.glade
-glade/formatPageDialog.glade
 glade/generic_importer.glade
 glade/keyeditor.glade
-glade/nutritionInfoEditor.glade
 glade/preferenceDialog.glade
-glade/recCard.normal.glade
 glade/recCardDescriptionEditor.glade
 glade/recCardDisplay.glade
 glade/recCardIngredientsEditor.glade
-glade/rec_ref_window.glade
-glade/recipeMerger.glade
 glade/recipe_index.glade
 glade/shopCatEditor.glade
-glade/shopList.glade
 glade/timerDialog.glade
 glade/valueEditor.glade
 gourmet.1
@@ -108,9 +102,6 @@ images/gold_star.png
 images/gourmet_logo.png
 images/half_gold_star.png
 images/no_star.png
-images/printed_half_star.png
-images/printed_no_star.png
-images/printed_star.png
 images/recbox.ico
 images/recbox.png
 images/recbox_biggish.ico
@@ -155,19 +146,15 @@ src/lib/defaults/defaults_sk.py
 src/lib/defaults/defaults_sv.py
 src/lib/exporters/MarkupString.py
 src/lib/exporters/__init__.py
-src/lib/exporters/__init__old.py
 src/lib/exporters/eatdrinkfeelgood_exporter.py
 src/lib/exporters/exportManager.py
 src/lib/exporters/exporter.py
 src/lib/exporters/gnomeprinter.py
 src/lib/exporters/gnomeprinter_obsolete.py
-src/lib/exporters/gxml2_exporter.py
 src/lib/exporters/gxml_exporter.py
-src/lib/exporters/html_exporter.py
 src/lib/exporters/lprprinter.py
 src/lib/exporters/mealmaster_exporter.py
 src/lib/exporters/page_drawer.py
-src/lib/exporters/pdf_exporter.py
 src/lib/exporters/printer.py
 src/lib/exporters/recipe_emailer.py
 src/lib/exporters/rtf_exporter.py
@@ -323,6 +310,10 @@ src/lib/plugins/key_editor/keyEditorPluggable.py
 src/lib/plugins/key_editor/keyEditorPlugin.py
 src/lib/plugins/key_editor/keyeditor.glade
 src/lib/plugins/key_editor/recipeEditorPlugin.py
+src/lib/plugins/listsaver.gourmet-plugin
+src/lib/plugins/listsaver.gourmet-plugin.in
+src/lib/plugins/listsaver/__init__.py
+src/lib/plugins/listsaver/shoppingSaverPlugin.py
 src/lib/plugins/nutritional_information.gourmet-plugin
 src/lib/plugins/nutritional_information.gourmet-plugin.in
 src/lib/plugins/nutritional_information/__init__.py
@@ -344,6 +335,7 @@ src/lib/plugins/nutritional_information/nutritionModel.py
 src/lib/plugins/nutritional_information/nutritionView.py
 src/lib/plugins/nutritional_information/parser_data.py
 src/lib/plugins/nutritional_information/reccard_plugin.py
+src/lib/plugins/nutritional_information/shopping_plugin.py
 src/lib/plugins/python_shell.gourmet-plugin
 src/lib/plugins/python_shell.gourmet-plugin.in
 src/lib/plugins/python_shell/__init__.py
