@@ -1,3 +1,10 @@
+2009-03-24  Thomas Hinkle  <tom@grenville>
+
+	* src/lib/plugins/import_export/html_plugin/html_exporter_plugin.py (HtmlExporterPlugin.get_multiple_exporter):
+	Eliminate obsolete arguments (progress_func is no longer needed
+	with our new signal interface and converters are now gotten using
+	a singleton design pattern.
+
 2009-03-14  Thomas Hinkle  <tom@grenville>
 
 	* src/lib/plugin_gui.py (PluginChooser.do_change_plugin): Display
